--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Titulo atractivo con click bait del post</h1>
             <p>Parrafo interesante :P</p>
