Agregado el contenido adicional de los parrafos

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,8 @@
         <div id="post">
             <h1>Titulo atractivo con click bait del post</h1>
             <p>Parrafo interesante :P</p>
+            <p>Parrafo de cambios</p>
+            <p>Hola soy un parrafo adicional soy increible :D</p>
         </div>
     </div>
 </body>
