--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu Blog de confianza
+                Tu Blog de cabecera
             </span>
         </div>
         <div id="post">
