--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu Blog de confianza
+                Tu Blog Master
             </span>
         </div>
         <div id="post">
@@ -20,6 +20,7 @@
             <p>Parrafo interesante :P</p>
             <p>Parrafo de cambios</p>
             <p>Hola soy un parrafo adicional soy increible :D</p>
+            <p>Suscribete y dale like XD</p>
         </div>
     </div>
 </body>
