Color de fondo y logo en el header

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/kansukedev.png" />
             Hyperblog 2.0
             <span id="tagline">
                 Tu Blog de cabecera
