Imagen agregada al proyecto

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
             <h1>Titulo atractivo con click bait del post</h1>
             <p>Parrafo interesante :P</p>
             <p>Parrafo de cambios</p>
+            <p>
+                <img src="/imagenes/image.jpg" width="100%" alt="">
+            </p>
             <p>Hola soy un parrafo adicional soy increible :D</p>
             <p>Suscribete y dale like XD</p>
         </div>
