--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <img id="logo" src="imagenes/kansukedev.png" />
             Hyperblog 2.0
             <span id="tagline">
-                Tu Blog de cabecera
+                Tu Blog de confianza
             </span>
         </div>
         <div id="post">
